@@ -6,5 +6,10 @@
 |19521407         | Hoàng Thái Dương  |
 |20521748         | Trần Gia Phong    |
 # Hướng dẫn cài đặt app quản lý rạp chiếu phim
-1. Tạo một database trên oracle 
-2. sử dụng file Cinemas_DBMS.sql để tạo cơ sở dữ liệu và insert dữ liệu
+1. Clone repo java_IS216.M22_09
+2. Tạo một database trên oracle 
+3. Sử dụng file Cinemas_DBMS.sql để tạo cơ sở dữ liệu và insert dữ liệu
+4. Vào properties của project, ở tab run trong phần VM Options, thêm câu lệnh: --add-opens=java.base/java.lang=ALL-UNNAMED
+5. Mở project đã clone từ repo về trên netbeans
+6. Add các thư viện jar trong folder LibraryProject theo dạng Absolute Path
+7. Log in với tài khoản nhân viên với username: phong, password: phong hoặc tài khoản quản lý với username: khoa, password: khoa
